objects/CRM_Opportunity_Stage_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Changed_Date__c</fullName>
        <label>Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_New_Value__c</fullName>
        <label>New Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Old_Value__c</fullName>
        <label>Old Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Stage Tracking</relationshipLabel>
        <relationshipName>Opportunity_Stage_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Stage Tracking</label>
    <nameField>
        <displayFormat>Opp-{000000}</displayFormat>
        <label>Opportunity Stage Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Stage Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>